lab1/Test/L1-A-7-49.cmm
int Ng ( struct hhI37i KhE1YUVlAibphxpXq , float wK3ND9qtq 
  [ 373374814 ] ) {
  return Wit3Ts5 = ZEe5Rk || Y50zKB4UmdjKpgu4bq && 
    Kv >= ai8RxiGdBe - ! J0V0dNa0qAfujXtNoC_J [ iEEinvG 
    = R > t / C_7QHHya23KB2aYO ( Dz2xIBUcrhHYb = TpWU 
    != ( mBHqQONr0rOZYp <= qgp2pljo6MVbLb + ( K4dKF0wjQi86w 
    == eQshy - - hb2KoI4Mh4eaV7X [ QZLQiHn || oEfNYhSKolYUv_Ftj 
    < lFLWFK6598alKZ - - ( aPrUR8409wpH2 != CMQ5xxzYRf2l24 
    ( f_eLmoPQSZpYEEMOGrX , FgX6ONfsJDcHdMmyj ) ) - - 
    ! F [ ! - ! ! N8TR = qfZfXInkTU2kXIu9 ] ] * nQlMXSosHnt 
    ) `- ACG1AkXEwqIkX19g7h8 ) / 161775123 + 1956222298.498770357 
    . gRDdMHhiy9 ) ] * - Qc1 ( ) ;
}
int ;
int ;
int LQH9Bbqa ( ) {
  vdizmi88m4 ;
  UmWBpAgkOQRVlW ;
  wwJjDzRb ;
  r ;
  HX7Z8rZsb3WfTu7AnQB ;
  if ( r8uTqW_NAbVfg1sTp ) {
    if ( doAQAHZnrgHT3qKLYgD )     lE4LxZjxuM9d ;`
else     ufNHn2vHa2VPb ;

  }else   if ( CGL7zrrYE )   while ( nyGiup4RG )   kwvTOX 
    ;



}:
int uzI9xAF , kIS2pCd 

;
struct ${
  int B6VlM ;
  struct EYLOOEJ4gDx {
  }Oehlo38X ;
  int ESKHLmMtNxYpIZb_ieb ;
  int xAcl13Be55luPYSaWr_j ;
  int ewBVkjL , wWOwpdO1 = oS7pvV6XneU ;
};
